--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           node-version:'18.x'
       - run: npm install
-      - run: npm run test
+      - run: npm test
       
